erDiagram
    BILLS {
        int BillId PK
        string BillCode UK
        int TableSessionId FK
        int SalesChannelId FK
        string SalesChannelCodeSnapshot
        string SalesChannelNameSnapshot
        int BillNo
        string BillName
        bool IsDefault
        string Status "Unpaid, Paid, Cancelled"
        decimal SubTotal
        decimal DiscountAmount
        decimal FinalAmount
        datetime CreatedAt
        int CreatedBy FK "nullable"
        datetime PaidAt
        datetime CancelledAt
        int CancelledBy FK "nullable"
        string CancelReason
    }

    BILL_DETAILS {
        int BillDetailId PK
        int BillId FK
        int MenuItemId FK
        int SalesChannelId FK
        string ItemName
        string ChoiceSummary
        string Note
        int Quantity
        int NotifiedQuantity
        decimal BasePriceSnapshot
        decimal MenuItemChannelExtraPriceSnapshot
        decimal ChoiceExtraPriceSnapshot
        decimal UnitPrice
        decimal TotalPrice
        datetime CreatedAt
    }

    BILL_DETAIL_ADJUSTMENTS {
        int BillDetailAdjustmentId PK
        int BillId FK
        int BillDetailId FK
        int MenuItemId FK
        string ItemName
        int QuantityBefore
        int QuantityAfter
        int ChangedQuantity
        string ChangeType
        string Reason
        datetime CreatedAt
        int CreatedBy FK
    }

    PAYMENTS {
        int PaymentId PK
        int BillId FK
        string PaymentMethod
        decimal Amount
        datetime PaidAt
        int ConfirmedBy FK
        datetime UpdatedAt
        int UpdatedBy FK "nullable"
        string ChangeReason
    }

    TABLE_SESSIONS ||--o{ BILLS : has
    SALES_CHANNELS ||--o{ BILLS : channel_for
    USERS ||--o{ BILLS : creates
    USERS ||--o{ BILLS : cancels
    BILLS ||--o{ BILL_DETAILS : contains
    MENU_ITEMS ||--o{ BILL_DETAILS : billed_item
    SALES_CHANNELS ||--o{ BILL_DETAILS : priced_by
    BILLS ||--o{ BILL_DETAIL_ADJUSTMENTS : records
    BILL_DETAILS ||--o{ BILL_DETAIL_ADJUSTMENTS : adjusted_detail
    MENU_ITEMS ||--o{ BILL_DETAIL_ADJUSTMENTS : adjusted_item
    USERS ||--o{ BILL_DETAIL_ADJUSTMENTS : creates
    BILLS ||--o{ PAYMENTS : paid_by
    USERS ||--o{ PAYMENTS : confirms
    USERS ||--o{ PAYMENTS : updates
